updated code with prod 3.0.10
