# src/controllers/ServiceController.ts
@@ -2,7 +2,7 @@ import { NextFunction, Request, Response } from 'express';
 import { HandleError, logger } from '../../utils';
 import { IService } from '../interfaces/IServices';
 import ServiceManager from '../managers/ServiceManager';
-import { serviceList, EMPTY_STRING, HTTP_STATUS_CODES, SERVICE_SCHEDULE_EVENT, SERVICE_CHANGE_EVENT } from '../../utils/constants';
+import { serviceList, EMPTY_STRING, HTTP_STATUS_CODES, SERVICE_SCHEDULE_EVENT, SERVICE_CHANGE_EVENT, REQUEST_INPROGRESS } from '../../utils/constants';
 import config from 'config';
 import SNSServiceManager from '../managers/SNSServiceManager';
 import moment from 'moment';
@@ -14,7 +14,7 @@ export default class ServiceController {
 	public async createService(req: Request, res: Response) {
 		try {
 			const servicePayload: IService = req.body;
-			logger.info('ADD Service has been invoked with following parameters ', { ...servicePayload });
+			logger.nonPhi.info('ADD Service has been invoked with following parameters ', { ...servicePayload });
 			res.json(await this.serviceManager.createService(servicePayload));
 		} catch (error) {
 			res.json(error);
@@ -28,9 +28,9 @@ export default class ServiceController {
 				from = req.query.from ? Number(req.query.from) : serviceList.defaultFrom,
 				limit = req.query.limit ? Number(req.query.limit) : serviceList.defaultLimit,
 				keyword = req.query.keyword ? String(req.query.keyword).replace(/_/g, '\\_') : EMPTY_STRING,
-				showInactive = req.query.showInactive ? Number(req.query.showInactive) : 0,
 				searchKey = keyword !== EMPTY_STRING ? serviceList.matchAll + keyword.trim() + serviceList.matchAll : EMPTY_STRING;
-			logger.debug('Service list invoked with following parameters', { sortBy, sortOrder, from, limit, keyword, showInactive });
+			const showInactive = req.query.showInactive ? Number(req.query.showInactive) : 0;
+			logger.nonPhi.debug('Service list invoked with following parameters', { sortBy, sortOrder, from, limit, keyword, showInactive });
 			if (Number(req.query.showInactive) === 1) {
 				//Show inactive=true
 				res.send(await this.serviceManager.getAllServicesList(sortBy, sortOrder, from, limit, searchKey));
@@ -39,6 +39,7 @@ export default class ServiceController {
 				res.send(await this.serviceManager.getNonInActiveServicesList(sortBy, sortOrder, from, limit, searchKey));
 			}
 		} catch (error) {
+			logger.nonPhi.error('Error while fetching the services list', error);
 			throw new HandleError({ name: 'ServiceListFetchError', message: error.message, stack: error.stack, errorStatus: error.statusCode });
 		}
 	}
@@ -46,7 +47,7 @@ export default class ServiceController {
 	public async createDraft(req: Request, res: Response) {
 		try {
 			const serviceID = req.body?.serviceID;
-			logger.debug('Create draft invoked with following parameter', { serviceID });
+			logger.nonPhi.debug('Create draft invoked with following parameter', { serviceID });
 			const service = JSON.parse(JSON.stringify(await this.serviceManager.getDetails(serviceID)));
 			const serviceDraftVersion = await this.serviceManager.createDraft(serviceID);
 			res.json(serviceDraftVersion);
@@ -86,11 +87,11 @@ export default class ServiceController {
 			const { moduleVersion } = req.body,
 				{ modules } = req.body,
 				{ serviceID }: any = req.params;
-			logger.debug('Update modules with module version invoked with following parameter', { moduleVersion, modules, serviceID });
+			logger.nonPhi.debug('Update modules with module version invoked with following parameter', { moduleVersion, modules, serviceID });
 			await this.serviceManager.addModuleConfig(serviceID, moduleVersion, modules);
 			res.status(HTTP_STATUS_CODES.ok).json({ modules, moduleVersion, message: config.get('service.updateModules.success.message') });
 		} catch (error: any) {
-			logger.error(error.message, { _err: error });
+			logger.nonPhi.error(error.message, { _err: error });
 			res.json(error.message);
 		}
 	}
@@ -98,11 +99,11 @@ export default class ServiceController {
 		try {
 			const serviceID = Number(req.query?.serviceID),
 				globalServiceVersion = Number(req.query?.globalServiceVersion);
-			logger.debug('Get serviceModule config invoked with following parameter', { serviceID, globalServiceVersion });
+			logger.nonPhi.debug('Get serviceModule config invoked with following parameter', { serviceID, globalServiceVersion });
 			const serviceModule = await this.serviceManager.getMissingModules(serviceID, globalServiceVersion);
 			res.send(serviceModule);
 		} catch (error: any) {
-			logger.error(error.message, { _err: error });
+			logger.nonPhi.error(error.message, { _err: error });
 			next(error);
 		}
 	}
@@ -118,7 +119,7 @@ export default class ServiceController {
 	public async schedule(req: Request, res: Response, next: NextFunction) {
 		try {
 			const { serviceID, globalServiceVersion, startDate, endDate } = req.body;
-			logger.debug('Schedule service invoked with following parameter', { serviceID, globalServiceVersion, startDate, endDate });
+			logger.nonPhi.debug('Schedule service invoked with following parameter', { serviceID, globalServiceVersion, startDate, endDate });
 			const scheduledService = JSON.parse(JSON.stringify(await this.serviceManager.schedule(serviceID, globalServiceVersion, startDate, endDate)));
 			res.send(scheduledService);
 			const validTill = endDate ? endDateWithClientTZ(endDate) : null;
@@ -147,7 +148,7 @@ export default class ServiceController {
 				);
 			}
 		} catch (error: any) {
-			logger.error(error.message, { _err: error });
+			logger.nonPhi.error(error.message, { _err: error });
 			next(error);
 		}
 	}
@@ -163,7 +164,7 @@ export default class ServiceController {
 	public async getDetails(req: Request, res: Response, next: NextFunction) {
 		try {
 			const serviceID = Number(req.query.serviceID);
-			logger.debug('Get service details invoked with following parameter', { serviceID });
+			logger.nonPhi.debug('Get service details invoked with following parameter', { serviceID });
 			const serviceDetails = await this.serviceManager.getDetails(serviceID);
 			res.send(serviceDetails);
 		} catch (error: any) {
@@ -172,11 +173,30 @@ export default class ServiceController {
 	}
 	public async getActiveServices(req: Request, res: Response, next: NextFunction) {
 		try {
-			logger.info('Geting service list');
+			logger.nonPhi.info('Geting service list');
 			const serviceDetails = await this.serviceManager.getActiveServices();
 			res.send(serviceDetails);
 		} catch (error: any) {
 			next(error);
+		}
+	}
+
+	public async createBulkServiceAttributes(req: Request, res: Response) {
+		try {
+			const fileName = req.file.originalname;
+
+			logger.nonPhi.info('Received the request for bulk service attributes association. Creating an entry in the database.');
+			const bulkAttributesRequest = await this.serviceManager.persistIncomingRequestForBulkAttributes(fileName, REQUEST_INPROGRESS, req.params.userId);
+
+			logger.nonPhi.info('Bulk attributes association processing begins.');
+			const response = await this.serviceManager.processBulkAttributesRequest(req.file, req.headers);
+
+			logger.nonPhi.info('Updating the database to set the metrics and the status of the request.');
+			await this.serviceManager.updateMetricsAndStatusForBulkAttributesRequest(bulkAttributesRequest, response);
+			res.json(response);
+		} catch (error) {
+			logger.nonPhi.error(error.message, { _error: error });
+			res.status(HTTP_STATUS_CODES.badRequest).json(error);
 		}
 	}
 }
