# src/routes/external/services-external-router.ts
@@ -7,15 +7,11 @@ import { getKeycloak } from '../../../config/keycloak-config';
 import { updateModuleConfig, getServiceAttributesSchema, getServiceDetailsSchema } from '../../models/externalSchema';
 import { Service } from '../../../database/models/Service';
 import { ServiceModuleConfig } from '../../../database/models/ServiceModuleConfig';
-import SNSServiceManager from '../../managers/SNSServiceManager';
 
-const externalController = new ExternalServiceController(new ExternalServiceManager(db.getRepository(Service), db.getRepository(ServiceModuleConfig)), new SNSServiceManager()),
+const externalController = new ExternalServiceController(new ExternalServiceManager(db.getRepository(Service), db.getRepository(ServiceModuleConfig))),
 	keycloak = getKeycloak(),
-	SERVICE_API_CREATE = process.env.SERVICE_CREATE_ROLE,
-	SERVICE_API_READ = process.env.SERVICE_READ_ROLE;
+	SERVICE_API_CREATE = process.env.SERVICE_CREATE_ROLE;
 export const ServicesExternalRouter = Router({ mergeParams: true });
-
-ServicesExternalRouter.route('/getAllActiveAndScheduledServices').get(keycloak.protect(SERVICE_API_READ), externalController.getAllActiveAndScheduledServices.bind(externalController));
 
 ServicesExternalRouter.route('/:serviceID/module/:moduleID').post(
 	keycloak.protect(SERVICE_API_CREATE),
